@@ -1,6 +1,3 @@
 #!/bin/bash
 
-### Uncomment to turn on XEVIE event capturing extension
-#Xephyr -ac -noreset +extension XEVIE :1
-
 Xephyr -ac -noreset :1
